fix deploy configs

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,11 +1,11 @@
 upstream unicorn {
-  server unix:/tmp/unicorn.blog.sock fail_timeout=0;
+  server unix:/tmp/unicorn.equiptory.sock fail_timeout=0;
 }
 
 server {
   listen 80 default deferred;
   # server_name example.com;
-  root /home/admin/apps/blog/current/public;
+  root /home/admin/apps/equiptory/current/public;
 
   location ^~ /assets/ {
     gzip_static on;
